--- a/views/admin/adminHome.ejs
+++ b/views/admin/adminHome.ejs
@@ -63,6 +63,7 @@
                       <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Price : </span><%= product.price%></span>
                       <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Sizes : </span><%= product.sizes%></span>
                       <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Brand : </span><%= product.brand%></span>
+                      <span class="card-title d-block"><span style="font-size: 17px; font-weight: 700;">Sales Count : </span><%= product.salesCount||0%></span>
                       <span class="card-title d-block text-center mt-2"><span style="font-size: 17px; font-weight: 700;"><u>Description</u></span></span>
                       <p class="card-text ps-2 pe-2 pb-2"><%= product.description%></p>
                     </div>
