--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="../../public/css/footer.css">
 </head>
 <body>
-    <div class="footer fixed-bottom">
+    <div class="footer fixed-bottom mt-4">
         <div class="footerBlur">
             <div class="footer2">
                 <div class="footerTxt">
