--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -1,6 +1,19 @@
 * a{
   text-decoration: none;
 }
+/* body.modal-open {
+  overflow: hidden;
+} */
+
+.product-card {
+  border-radius: 10px;
+  margin-bottom: 10px;
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+
 .sideImage {
     border: 1px solid rgb(0, 0, 0);
     border-radius: 20px;
