--- a/views/admin/bannerManagement.ejs
+++ b/views/admin/bannerManagement.ejs
@@ -10,13 +10,13 @@
     </div>
 
     <div class="container mainCont mb-5">
-        <h3 class="mb-3 mt-3 text-center" style="font-family: 'Michroma', sans-serif;">Banner MANAGEMENT</h3>
+        <h3 class="mb-5 mt-3 text-center" style="font-family: 'Michroma', sans-serif;">Banner Management</h3>
 
         <form action="/admin/updateBanner" class="needs-validation" method="POST" enctype="multipart/form-data">
             
             <div class="form-group">
                 <div class="d-grid" style="grid-template-columns: repeat(2, 1fr); column-gap: 10px; row-gap: 10px;">
-                  
+                  <label for="images">Images :</label> <br>
                     <% images?.forEach(image => { %>
                         <div class="rounded" style="overflow: hidden; height: 140px; align-items: center; position: relative;">
                             <img src="../../public/productImages/<%= image %>" class="rounded img-thumbnail" style="width: 200px; height: 140px; object-fit: cover;" alt="...">
@@ -35,7 +35,7 @@
                     </script>
                     
                 </div>
-                <label for="images">Images:</label> <br>
+                <label class="mt-3" for="images" >Select Images:</label> <br>
                 <small>Max 4 Images!</small> <br>
                 <input class="inputFieldImage" type="file" class="form-control-file" id="images" name="images" accept="image/*" multiple >
             </div>
