--- a/views/user/orderConfirmation.ejs
+++ b/views/user/orderConfirmation.ejs
@@ -1,5 +1,4 @@
 <%- include('../layout/headerHTML')-%>
-
 <link rel="stylesheet" type="text/css" href="../../public/css/orderConfirmation.css">
 </head>
 <body>
@@ -9,15 +8,15 @@
         <img src="../../public/images/1065313-200.png" alt="Success Logo" class="success-logo">
         <h4 class="text-end">Order Confirmed!</h4>
 
-        <div class="confirmation-message">
-            <p>Your order has been successfully placed. Thank you for shopping with us!</p>
-        </div>
+      
 
         <div class="order-details">
             <h3>Order Details</h3>
-
+            <div class="confirmation-message">
+                <p>Your order has been successfully placed. Thank you for shopping with us!</p>
+            </div>
             <% products.forEach(product => { %>
-                <div class="product-card">
+                <div class="product-card" style="border: 1px solid black; background-color: rgba(255, 255, 255, 0.804);">
                     <div class="product-info">
                         <h5><%= product.product.name %></h5>
                         <p>Quantity : <%=product.quantity %></p>
@@ -29,7 +28,7 @@
         </div>
 
         <div class="order-total">
-            <p>Total Amount: <%= total %></p>
+            <p class="btn btn-dark">Total Amount: <%= total %></p>
         </div>
         <div class="row" style="display: flex; justify-content: center;">
             <div class="col-12 col-lg-8">
@@ -43,7 +42,10 @@
         <div class="thank-you-message">
             <p>Thank you for shopping with us! Your order will be shipped soon.</p>
         </div>
-        <a href="/user/home" class="mt-3 mb-5" style="display: flex; justify-content: center; text-decoration: none;"><span class="btn btn-dark rounded">Continue Shopping</span></a>
+        <div class="d-flex" style="justify-content: center; gap: 20px;">
+            <a href="/user/home" class="mt-3 mb-5" style="display: flex; justify-content: center; text-decoration: none;"><span class="btn btn-dark rounded">Continue Shopping</span></a>
+            <a href="/user/orderDetailed?id=<%=id %>" class="mt-3 mb-5" style="display: flex; justify-content: center; text-decoration: none;"><span class="btn btn-dark rounded">View Order</span></a>
+        </div>
     </div>
 </div>
 </div>
